from _user import User, FriendInfo

class Travel():
    def __init__(self):
        pass

class TravelInfo():
    def __init__(self):
        pass

class TravelGroup():
    def __init__(self):
        pass
